# hashemi

./: .env  Cargo.toml  README.md  admin.html  demo.html  persian-date-simple.js  persian-date.js  run.sh  test-date-conversion.js  test-login.html
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 0001_create_users_table.sql
backend/src/: lib.rs  main.rs
backend/src/application/: user_service.rs
backend/src/domain/: repository.rs  user.rs
backend/src/infrastructure/: mod.rs  postgres_user_repo.rs
backend/src/presentation/: auth_handlers.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/assets/css/: persian-datepicker.min.css
frontend/assets/js/: jquery-3.6.0.min.js  persian-datepicker.min.js
frontend/src/: lib.rs  lib_backup.rs
