[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors", "trace"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "offline", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
jsonwebtoken = "8"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0"
async-trait = "0.1"

[package.metadata.sqlx]
offline = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
jsonwebtoken = "8"
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
